# sentiment_pipeline

./: .env.example  .env.test.example  .gitignore  ARCHITECTURE.md  DOCUMENTATION.md  README.md  TASK.md  TODO.md  alembic.ini  conftest.py  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  scraper_implementation_rule.md  timescaledb_integration_guide.md  upgrade_to_timescaledb.md
.windsurf/rules/: sentiment-pipeline-rule.md
.windsurf/workflows/: project-doc-read.md
alembic/: env.py
alembic/versions/: 2dde641de514_create_raw_events_table_and_drop_raw_.py  6694fbaad3c6_add_sentiment_score_to_sentiment_results.py  84df3802d234_add_processed_at_and_index_to_raw_.py  b1c2d3e4f5ab_align_metric_table_with_orm.py  be48d34d59dd_create_initial_schema_and_hypertable.py  d2dff1ec4c53_create_sentiment_analysis_tables.py
common/tests/: comment_scraper_test_plan.md  conftest.py  database_integration_test_plan.md  timescaledb_test_strategy.md
dashboard_service/: .env.example  Dockerfile  README.md  prd.md  pyproject.toml  todo.md
dashboard_service/src/dashboard_service/: __init__.py  chart_advanced.py  chart_simple.py  main.py  main_clean.py  main_original.py
dashboard_service/src/dashboard_service/api/: __init__.py  client.py
dashboard_service/src/dashboard_service/config/: __init__.py  settings.py
dashboard_service/src/dashboard_service/services/: __init__.py  data_service.py
dashboard_service/src/dashboard_service/utils/: __init__.py  logging.py
dashboard_service/tests/: __init__.py
dashboard_service/tests/unit/: test_api_client.py
reddit_scraper/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  __init__.py  check_gaps.py  check_prometheus.py  cli_db.py  config.py  config.yaml  docker-compose.yml  gap_detection_implementation_plan.md  mock_test.py  postgres_implementation_plan.md  prd.md  pyproject.toml  reddit_client.py  run_gap_filler.py  scraper_utils.py  test_env.txt  todo.md  todo_part2.md
reddit_scraper/collector/: collector.py  maintenance.py
reddit_scraper/docs/: architecture.md  default_scraper.md  event_lifecycle.md  monitoring.md  pgbouncer_integration_summary.md  specialized_scrapers.md  sqlalchemy_implementation_summary.md
reddit_scraper/models/: submission.py
reddit_scraper/monitoring/: __init__.py
reddit_scraper/reconciliation/: DATA_RECONCILIATION_IMPLEMENTATION.md  DATA_RECONCILIATION_STRATEGY.md  __init__.py  data_loaders.py  main.py  reconciler.py  validator.py
reddit_scraper/reddit_scraper/: __init__.py  base_scraper.py  cli.py  cli_db.py  config.py
reddit_scraper/reddit_scraper/collector/: backfill.py  collector.py  error_handler.py  maintenance.py  rate_limiter.py
reddit_scraper/reddit_scraper/models/: base.py  mapping.py  (+1 more)
reddit_scraper/scrapers/: __init__.py  deep_historical_scraper.py  targeted_historical_scraper.py
reddit_scraper/scripts/: check_raw_events_uniqueness.sql  init-schema.sql  run_bidirectional_reconciliation.ps1
reddit_scraper/storage/: composite_sink.py  csv_sink.py  database.py  db.py  db_migration.py  sqlalchemy_postgres_sink.py
reddit_scraper/tests/: test_cli.py  test_cli_db.py  test_collector.py  test_config.py  test_csv_sink.py  test_error_handler.py  test_maintenance.py  test_mapping.py  test_monitoring.py  test_pagination.py  test_rate_limiter.py  test_scrapers.py  test_targeted_historical_scraper_gap_filling.py
sentiment_analyzer/: .env.example  Dockerfile  README.md  pyproject.toml  start.sh
sentiment_analyzer/api/: main.py
sentiment_analyzer/api/endpoints/: sentiment.py
sentiment_analyzer/config/: app_config.yaml  logging_config.yaml  settings.py
sentiment_analyzer/core/: __init__.py  data_fetcher.py  pipeline.py  preprocessor.py  result_processor.py  sentiment_analyzer_component.py
sentiment_analyzer/integrations/: powerbi.py
sentiment_analyzer/models/: __init__.py  base.py  dead_letter_event_orm.py  dtos.py  sentiment_metric_orm.py  sentiment_result_orm.py
sentiment_analyzer/tests/: conftest.py  test_api_endpoints.py  test_api_integration.py  test_powerbi_integration.py
sentiment_analyzer/tests/integration/core/: test_pipeline_integration.py  test_result_processor_integration.py
sentiment_analyzer/tests/stubs/: raw_event_stub.py
sentiment_analyzer/tests/unit/core/: test_data_fetcher.py  test_pipeline.py  test_preprocessor.py  test_result_processor.py  test_sentiment_analyzer_component.py
sentiment_analyzer/utils/: db_health.py  db_session.py  logging_utils.py
sentiment_docs/: API_EXAMPLES.md  DEPLOYMENT.md  POWERBI.md  TODO.md  design.md  event_lifecycle.md  gpu_support.md  prd.md  todo_details.md
timescaledb/: COMMANDS.md  import_data_from_csv.py  prd.md  run_docker_tests.ps1  run_tests.ps1  sql_perf_query.md  tests_implementation_plan.md  todo.md  todo_details.md
timescaledb/tests/: conftest.py  test_docker_integration.py  test_minimal_postgres.py  test_raw_events_model.py  test_sqlalchemy_postgres_sink_fixed.py  test_sqlalchemy_postgres_sink_integration.py  test_sqlalchemy_postgres_sink_integration_fixed.py
(+15 files in other folders)
